--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://mrtwister.github.com/1c_dev
-title: 1C-developer
+url: http://developer1c.ru
+title: Разработчик 1С
 subtitle: Блог о суровых реалиях тупого и жадного 1сника
 author: Роман Беляев
 simple_search: http://google.com/search
@@ -26,7 +26,7 @@ email:
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: /1c_dev
+root: /
 permalink: /blog/:year/:month/:day/:title/
 source: source
 destination: public/1c_dev
@@ -39,13 +39,14 @@ pygments: false # default python pygments have been replaced by pygments.rb
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+excerpt_link: "Читать дальше &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
 titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [custom/asides/main_list.html, custom/asides/categories.html, asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html, custom/asides/about.html]
+post_asides: [custom/asides/listicon.html, asides/recent_posts.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, custom/asides/about.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -64,8 +65,8 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
-twitter_tweet_count: 4
+twitter_user: belyaev_rs
+twitter_tweet_count: 5
 twitter_show_replies: false
 twitter_follow_button: true
 twitter_show_follower_count: false
@@ -77,7 +78,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: 102204239050620620987
 googleplus_hidden: false
 
 # Pinboard
@@ -93,7 +94,7 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-34619019-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
